style.css
/* Reset box-sizing */

html {
    box-sizing: border-box;
}

*, *::after, *::before {
    box-sizing: inherit;
}

body {
    margin: 0;
    padding: 0;
    font-family: Arial, sans-serif;
}

.cards-container {
    display: flex;
    justify-content: center;
}

.card {
    display: flex;
    flex-direction: column;
    width: 246px;
    background-color: #f9f9f9;
    margin: 10px;
    padding: 15px;
}

.card-image {
    width: 210px;
    align-self: center;
}

.product-name {
    margin: 15px 0;
}

.price {
    margin: 0 0 15px 0;
}

.btn {
    padding: 7px 20px;
    border: 3px solid #185abc;
    background-color: white;
    color: #1a73e8;
    border-radius: 20px;
    font-size: 15px;
    transition-duration: 0.15s;
}

.btn:hover {
    border-color: #1a73e8;
    background-color: #1a73e8;
    color: white;
    transition-duration: 0.15s;
    cursor: pointer;
}

